--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -25,22 +25,22 @@
             class: 'desktop_button',
         } %}
         
-        <section id="portfolio" class="scroll_reveal js-portfolio">
+        <section id="portfolio" class="js-portfolio">
             <div id="projects" class="section_titles scrollspy"><h2 class="center-align">PORTFOLIO</h2></div>
             {% include "blocks/_project.html.twig" %}
         </section>
         
-        <section id="formations" class="scroll_reveal js-education">
+        <section id="formations" class="scroll_reveal slide-left js-education">
             <div id="cursus" class="section_titles scrollspy"><h2 class="center-align">PARCOURS</h2></div>
             {% include "blocks/_education.html.twig" %}
         </section>
         
-        <section id="competences" class="scroll_reveal js-competence">
+        <section id="competences" class="scroll_reveal slide-left js-competence">
             <div id="tools" class="section_titles scrollspy"><h2 class="scenter-align">ENV</h2></div>
             {% include "blocks/_competences.html.twig" %}
         </section>
 
-        <section class="scroll_reveal js-contact">
+        <section class="scroll_reveal slide-left js-contact">
             <div id="contact-me" class="section_titles scrollspy"><h2 class="center-align">CONTACT</h2></div>
             {% include "blocks/_contact.html.twig" %}
         </section>
