--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -12,6 +12,7 @@
 
 // components
 @import "components/global";
+@import "components/carousel";
 @import "components/grid";
 @import "components/navbar";
 @import "components/typography";
