--- a/assets/styles/front/_main.scss
+++ b/assets/styles/front/_main.scss
@@ -709,6 +709,28 @@ body {
             margin: 0;
         }
     }
+    .scroll_reveal {
+        opacity: 0;
+        transition: opacity 1000ms;
+    } 
+    .scroll_reveal.scrolled {
+        opacity: 1;
+    }
+    .scrolled.slide-right {
+        animation: slide-in-right 3s ease-in-out both;
+    }
+    @keyframes slide-in-right {
+        0% {
+          -webkit-transform: translateX(100px);
+          transform: translateX(100px);
+          opacity: 0;
+        }
+        100% {
+          -webkit-transform: translateX(0);
+          transform: translateX(0);
+          opacity: 1;
+        }
+    }
 }
 body[theme=dark] {
     .card {
