new timeline for education section

--- a/assets/styles/front/_variables.scss
+++ b/assets/styles/front/_variables.scss
@@ -2,6 +2,7 @@
     --main-theme: 255, 255, 255;
     --secondary-theme: 37, 36, 35;
     --tertiary-theme: 235, 235, 235;
+    --accent-tertiary-theme: 211, 207, 205;
     --shady: 61, 59, 59;
     --gradient: 99, 99, 99;
     --accent-color: 56, 167, 226;
@@ -19,6 +20,7 @@
     --main-theme: 37, 36, 35;
     --secondary-theme: 235, 235, 235;
     --tertiary-theme: 50, 49, 48;
+    --accent-tertiary-theme: 82, 82, 82;
     --shady: 209, 200, 200;
     --gradient: 125, 125, 125;
     --accent-background: 3, 22, 37;
