--- a/assets/styles/components/_gallery.scss
+++ b/assets/styles/components/_gallery.scss
@@ -71,8 +71,8 @@ body {
     // gallery
     .grid_gallery {
         display: grid; 
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 13vw);
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 13vw);
         gap: 1rem;
         width: 95%;
         margin: 0 auto;
@@ -81,14 +81,22 @@ body {
                 height: 100%;
                 background:none;
             }
-            &.gallery__item--2 {
-                grid-column: 2 / span 2;
-                grid-row: 1/ span 2; 
-            }
-            &.gallery__item--11 {
-                grid-column: 2 / span 2; 
-                grid-row: 4 / span 2; 
-            }
+            // &.gallery__item--2 {
+            //     grid-column: 2;
+            //     grid-row: 1/span 2;
+            // }
+            // &.gallery__item--4 {
+            //     grid-column: 4;
+            //     grid-row: 1/span 2; 
+            // }
+            // &.gallery__item--6 {
+            //     grid-column: 1;
+            //     grid-row: 2/span 2; 
+            // }
+            // &.gallery__item--8 {
+            //     grid-column: 3;
+            //     grid-row: 2/span 2; 
+            // }
         }
     }
 
