chore: maj prod

--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -1,4 +1,4 @@
-<div id="contact" class="page-footer bg_white_section row">
+<div class="page-footer bg_white_section row js-contact">
     <div class="logo col s12 l1 center-align" id="logo">
         CSaidi
     </div>
