--- a/templates/blocks/_header.html.twig
+++ b/templates/blocks/_header.html.twig
@@ -12,19 +12,23 @@
         
         <ul class="collection">
             {# icons menu #}
-            <li class="collection-item transparent"><a class="nav_link projects active" href="#projects">
-                {% include "blocks/components/svgs/menu_icons/_gallery.html.twig" %}
-                <span class="after">PORTOLIO</span>
+            <li class="collection-item transparent"><a class="nav_link aPropos active" href="#aPropos">
+                {% include "blocks/components/svgs/menu_icons/_about.html.twig" %}
+                <span class="after">A&#8239;PROPOS</span>
             </a></li>
-            <li class="collection-item transparent"><a class="nav_link cursus" href="#cursus">
+            <li class="collection-item transparent"><a class="nav_link portfolio" href="#portfolio">
+                {% include "blocks/components/svgs/menu_icons/_gallery.html.twig" %}
+                <span class="after">PORTFOLIO</span>
+            </a></li>
+            <li class="collection-item transparent"><a class="nav_link formations" href="#formations">
                 {% include "blocks/components/svgs/menu_icons/_diploma.html.twig" %}
                 <span class="after">PARCOURS</span>
             </a></li>
-            <li class="collection-item transparent"><a class="nav_link tools" href="#tools">
+            <li class="collection-item transparent"><a class="nav_link competences" href="#competences">
                 {% include "blocks/components/svgs/menu_icons/_coding.html.twig" %}
                 <span class="after">ENVIRONNEMENT</span>
             </a></li>
-            <li class="collection-item transparent"><a class="nav_link contact-me" href="#contact-me">
+            <li class="collection-item transparent"><a class="nav_link contact" href="#contact">
                 {% include "blocks/components/svgs/menu_icons/_mail.html.twig" %}
                 <span class="after">CONTACT</span>
             </a></li>
