--- a/assets/styles/front/_main.scss
+++ b/assets/styles/front/_main.scss
@@ -216,10 +216,6 @@ body {
     .container {
         margin: 0 auto;
     }
-    #competence .container, #portfolio .container, #formations .container {
-        width: 100%;
-        max-width: initial;
-    }
     .blur {
         background-color: rgba(var(--main-theme),.04)!important;
         backdrop-filter: blur(81px);
@@ -411,6 +407,10 @@ body {
         }
     }
     #portfolio {
+        .container {
+            max-width: none;
+            width: 100%;
+        }
         .card {
             // margin: 0 0.5rem 1rem 0.5rem;
             margin: 0;
@@ -535,7 +535,7 @@ body {
         }
     }
     #contact {
-        &.row {
+        .row {
             margin-bottom: 0;
         }
         .contact_paragraph {
@@ -644,6 +644,8 @@ body {
             }
             .badge {
                 background-color: rgb(var(--main-theme));
+                display: inline-block;
+                margin-top: 0.5rem;
             }
         }
     }
