--- a/templates/blocks/_presentation.html.twig
+++ b/templates/blocks/_presentation.html.twig
@@ -1,18 +1,8 @@
 {% if presentation|default %}
-    <div id="caption-border" class="caption js-about">
-        <div class="box-caption ">
-            <div class="text-caption center-align">
-                <h1><span class="name grey-text text-lighten-1">Charlotte Saidi</span>
-                <span class="sep"></span>
-                <span class="job light grey-text">Développeuse Web Junior</span></h1>
-            </div>
-
-            <div id="aPropos" class="section scrollspy">
-                <div class="container">
-                    <div class="text">
-                        {{ presentation.textBlock|raw }}
-                    </div>
-                </div>
+    <div class="bg_white_section">
+        <div class="container">
+            <div class="center-align">
+                {{ presentation.textBlock|raw }}
             </div>
         </div>
     </div>
