--- a/templates/blocks/_project.html.twig
+++ b/templates/blocks/_project.html.twig
@@ -13,43 +13,64 @@
                 </div>
             {% endif %} #}
 
-            {% set rows = (projects|length)/2 %}
+            {% set rows = (projects|length)/2.5 %}
 
             <div class="grid_gallery" style="grid-template-rows: repeat({{rows|round(0, 'floor')}}, 21vw)!important;">
                 {% set i = 0 %}
                 {% for project in projects %}
-                {% set i = i+1 %}
-                <div class="gallery__item--{{i}} grid_items" style="background:url('{{asset('uploads/projets/' ~ project.image)}}'); background-size: cover; background-position: top;">
-                    <div class="hexIn card">
-                        <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
-                            <h3>{{project.title}}</h3>
-                            {{project.description|raw}}
-                        </a>
+                    {% set i = i+1 %}
+                    <div class="gallery__item--{{i}} grid_items" style="background:url('{{asset('uploads/projets/' ~ project.image)}}'); background-size: cover; background-position: top;">
+                        <div class="hexIn card">
+                            <a class="hexLink modal-trigger hex_modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
+                                <h3>{{project.title}}</h3>
+                                {{project.description|raw}}
+                            </a>
+                        </div>
                     </div>
-                </div>
                 {% endfor %}
             </div>
         </div>
 
-        {# Mobile Slideshow #}
-        <!-- Slideshow container -->
-        <div class="slideshow-container hide-on-large-only card">
-
-            <!-- Full-width images with number and caption text -->
-            {% for project in projects %}
-                <div class="slides fade">
-                    <a class="slide_link modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
-                        <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" >
-                        <h3 class="slide_text">{{project.title}}</h3>
-                    </a>
+        <section class="section-with-carousel section-with-left-offset position-relative hide-on-large-only">
+            <div class="carousel-wrapper">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        {% for project in projects %}
+                            <div class="swiper-slide">
+                            <figure>
+                                <a class="slide_link modal-trigger" data-target="modal1{{project.id}}" data-project="{{project.id}}">
+                                    <img src="{{asset('uploads/projets/' ~ project.image)}}" alt="Maquette du projet {{project.title}}" >
+                                </a>
+                                <figcaption>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20">
+                                    <path d="M12 13.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"></path>
+                                    <path fill-rule="evenodd" d="M19.071 3.429C15.166-.476 8.834-.476 4.93 3.429c-3.905 3.905-3.905 10.237 0 14.142l.028.028 5.375 5.375a2.359 2.359 0 003.336 0l5.403-5.403c3.905-3.905 3.905-10.237 0-14.142zM5.99 4.489A8.5 8.5 0 0118.01 16.51l-5.403 5.404a.859.859 0 01-1.214 0l-5.378-5.378-.002-.002-.023-.024a8.5 8.5 0 010-12.02z"></path>
+                                </svg>
+                                {{project.title}}
+                                </figcaption>
+                            </figure>
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
-            {% endfor %}
+            </div>
+            <div class="carousel-controls">
+                <div class="carousel-control carousel-control-left">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40">
+                    <path fill-rule="evenodd" d="M10.78 19.03a.75.75 0 01-1.06 0l-6.25-6.25a.75.75 0 010-1.06l6.25-6.25a.75.75 0 111.06 1.06L5.81 11.5h14.44a.75.75 0 010 1.5H5.81l4.97 4.97a.75.75 0 010 1.06z"></path>
+                </svg>
+                </div>
+                <div class="carousel-control carousel-control-right">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40">
+                    <path fill-rule="evenodd" d="M13.22 19.03a.75.75 0 001.06 0l6.25-6.25a.75.75 0 000-1.06l-6.25-6.25a.75.75 0 10-1.06 1.06l4.97 4.97H3.75a.75.75 0 000 1.5h14.44l-4.97 4.97a.75.75 0 000 1.06z"></path>
+                </svg>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </section>
 
-            <!-- Next and previous buttons -->
-            <a class="prev">&#10094;</a>
-            <a class="next">&#10095;</a>
-
-        </div>
+        
     </div>
 </div>
 
