--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -9,7 +9,7 @@
 
     <div class="container_login">
         <div class="main">
-            <div class="row valign-wrapper">
+            <div class="row valign-wrapper auth_template">
                 <div class="card-panel">
                     <p>
                         Email contenant le lien de réinitialisation de mot de passe à l'adresse fournie.
