--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="container_login">
         <div class="main">
-            <div class="row valign-wrapper">
+            <div class="row valign-wrapper auth_template">
                 <div class="card-panel">
                     <h1>Réinitialiser le mot de passe</h1>
     
