--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
     <div class="container_login">
         <div class="main">
-            <div class="row card-panel">
+            <div class="row card-panel auth_template py-2 px-3">
                 <div class="inner_row">
                     <form class="login" method="post">
                         {% if error %}
