--- a/assets/styles/components/_gallery.scss
+++ b/assets/styles/components/_gallery.scss
@@ -81,123 +81,54 @@ body {
                 height: 100%;
                 background:none;
             }
-            // &.gallery__item--2 {
-            //     grid-column: 2;
-            //     grid-row: 1/span 2;
-            // }
-            // &.gallery__item--4 {
-            //     grid-column: 4;
-            //     grid-row: 1/span 2; 
-            // }
-            // &.gallery__item--6 {
-            //     grid-column: 1;
-            //     grid-row: 2/span 2; 
-            // }
-            // &.gallery__item--8 {
-            //     grid-column: 3;
-            //     grid-row: 2/span 2; 
-            // }
         }
     }
 
     // SlideShow
-    /* Slideshow container */
-    .slideshow-container {
-        max-width: 1000px;
-        overflow: hidden;
-        width: 90%;
-        position: relative;
-        margin: 0 auto !important;
-        .slides {
-            display: none;
-            img {
-                display:block;
-                width: 100%;
-                height: 50vh;
-                object-fit: cover;
-            }
-            &.fade {
-                animation-name: fade;
-                animation-duration: 1.5s;
-            }
-        }
-        .prev, .next {
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            width: auto;
-            margin-top: -22px;
-            padding: 16px;
-            color: white;
-            font-weight: bold;
-            font-size: 18px;
-            transition: 0.6s ease;
-            border-radius: 0 3px 3px 0;
-            user-select: none;
-            &:hover {
-                background-color: rgba(0,0,0,0.8);
-            }
-        }
-        .next {
-            right: 0;
-            border-radius: 3px 0 0 3px;
-        }
-    }
-    .slide_link {
+    .swiper {
+      .project-background {
+        width: 100%;
+        height: 500px;
+        background-size: cover !important;
+      }
+      img {
+        width: 100%;
+        object-fit: cover;
+      }
+      .slide_link {
         display: block;
         cursor: pointer;
         &:after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: transparentize(#031625, .15);
-            transition: height .6s;
+          content: '';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: transparentize(#031625, .15);
+          transition: height .6s;
         }
         &:hover {
-            &:after {
-                height: 0;
-            }
-            .slide_text {
-                height: 0;
-            }
+          &:after {
+            height: 0;
+          }
+          .slide_text {
+            height: 0;
+          }
 
         }
-        &.carousel-item {
-            height: auto!important;
-        }
     }
-    .slide_text {
-        color: #ffffff;
-        font-size: 1.5rem !important;
-        position: absolute;
-        bottom: 0;
-        overflow: hidden;
-        height: 20%;
-        width: 100%;
-        text-align: center;
-        transition: height .6s;
-        z-index: 1;
-    }
-    @keyframes fade {
-        from {opacity: .4}
-        to {opacity: 1}
-    }
+  }
+}
+
+.swiper-pagination-bullet {
+  opacity: var(--swiper-pagination-bullet-inactive-opacity, 1)!important;
 }
 
 /*** HEX SWIPER **********************************************************************/
 body {
     .swiper {
         display: none;
-    }
-}
-
-// Global Grid media queries
-@media screen and (max-width: 900px) {
-    body {
-        // 
     }
 }
 @media screen and (max-width: 675px) {
