--- a/assets/styles/front/_variables.scss
+++ b/assets/styles/front/_variables.scss
@@ -14,6 +14,7 @@
     --error-background: 235, 188, 188;
     --primary-font: 'Josefin Sans', monospace, sans-serif;
     --secondary-font: "Qwigley", monospace, sans-serif;
+    --swiper-theme-color: #8a99a3!important;
 }
 
 [theme=dark] {
